--- a/DIP/FinalProject.ui
+++ b/DIP/FinalProject.ui
@@ -6,155 +6,97 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>453</width>
-    <height>682</height>
+    <width>694</width>
+    <height>490</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QGroupBox" name="groupBox">
+  <widget class="QPushButton" name="imgBt">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>50</y>
-     <width>271</width>
-     <height>101</height>
+     <x>30</x>
+     <y>380</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
    </property>
-   <property name="title">
-    <string>Pre-Processing</string>
+   <property name="text">
+    <string>Select Image</string>
    </property>
-   <widget class="QPushButton" name="preProcessing">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>30</y>
-      <width>112</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Image Preprocessing</string>
-    </property>
-   </widget>
   </widget>
-  <widget class="QGroupBox" name="groupBox_2">
+  <widget class="QLineEdit" name="imgName">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>190</y>
-     <width>271</width>
-     <height>211</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Training</string>
-   </property>
-   <widget class="QPushButton" name="preTrain">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>30</y>
-      <width>112</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Pre-Training</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="training">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>90</y>
-      <width>112</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Training</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>150</y>
-      <width>112</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Evaluate</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="crossTrain">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>90</y>
-      <width>112</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>3fold cross validation</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_3">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
+     <x>30</x>
      <y>440</y>
-     <width>271</width>
-     <height>171</height>
+     <width>113</width>
+     <height>20</height>
     </rect>
    </property>
-   <property name="title">
-    <string>Predict</string>
+  </widget>
+  <widget class="QTextEdit" name="dcText">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>70</y>
+     <width>161</width>
+     <height>351</height>
+    </rect>
    </property>
-   <widget class="QPushButton" name="loadTest">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>20</y>
-      <width>151</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Load Test Image and Mask</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="predict">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>120</y>
-      <width>151</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Predict</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="loadModel">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>70</y>
-      <width>151</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Load Model</string>
-    </property>
-   </widget>
+  </widget>
+  <widget class="QPushButton" name="gtBt">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>380</y>
+     <width>111</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Select Model</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="runBt">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>380</y>
+     <width>111</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>RUN</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="maskName">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>440</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="threshold">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>440</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>0.9</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
   </widget>
  </widget>
  <resources/>
